--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="jspm_packages/npm/angular2@2.0.0-beta.9/bundles/angular2-polyfills.min.js"></script>
     <script src="jspm.browser.js"></script>
     <script src="jspm.config.js"></script>
+    <script src="app-bundle.js"></script>
     <script>
       System.import("app/boot")
         .then(null, console.error.bind(console));
